# wmBus-tool

./: .gitignore  Doxyfile.in  LICENSE  Makefile  Makefile.am  README.md  configure.ac  settings.conf
include/: apputils.h  wmbus.h  wmbusext.h
src/: Makefile.am  apputils.c  wmbus-tool.c  wmbus.c
test/: Makefile.am  test-wmbus  test-wmbus.c
